--- a/seek-mobile/src/app/tabs/tabs.page.html
+++ b/seek-mobile/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon name="contact"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="skills">
+      <ion-icon name="star-half"></ion-icon>
+      <ion-label>Skills</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
