--- a/seek-mobile/src/app/profile/profile.page.html
+++ b/seek-mobile/src/app/profile/profile.page.html
@@ -6,16 +6,22 @@
     </ion-toolbar>
 </ion-header>
 
-<ion-content scrollY="false">
-    <ion-list lines="full" class="ion-no-margin ion-no-padding" >
+<ion-content>
 
+    <div id="profileDiv">
+        <ion-avatar>
+            <img src="https://i0.wp.com/www.winhelponline.com/blog/wp-content/uploads/2017/12/user.png">
+        </ion-avatar>
+        <ion-button size="small" (click)="openImagePicker()">Select Photo</ion-button>
+    </div>
+
+    <ion-list lines="full" class="ion-no-margin ion-no-padding" >
         <ion-item>
             <ion-label position="stacked">Name
                 <ion-text color="danger">*</ion-text>
             </ion-label>
             <ion-input required type="text" placeholder="John Doe" oninput="handleFullNameValue(event)"></ion-input>
         </ion-item>
-
         <ion-item>
             <ion-label position="stacked">Address<ion-text color="danger">*</ion-text></ion-label>
             <ion-input placeholder="Address Line 1"></ion-input>
@@ -24,7 +30,6 @@
             <ion-input placeholder="State"></ion-input>
             <ion-input placeholder="Zip Code"></ion-input>
         </ion-item>
-
         <ion-item>
             <ion-label position="stacked">Gender<ion-text color="danger">*</ion-text></ion-label>
             <ion-select placeholder="Select One">
@@ -32,25 +37,22 @@
                 <ion-select-option value="m">Male</ion-select-option>
             </ion-select>
         </ion-item>
-
         <ion-item>
             <ion-label position="stacked">Phone number<ion-text color="danger">*</ion-text>
             </ion-label>
             <ion-input required type="text" placeholder="+01 000000001"
                        oninput="handlePhoneNumberValue(event)"></ion-input>
         </ion-item>
-
         <ion-item>
             <ion-label position="stacked">Email<ion-text color="danger">*</ion-text>
             </ion-label>
             <ion-input required type="text" placeholder="johndoe@gmail.com"
                        oninput="handleEmailValue(event)"></ion-input>
         </ion-item>
-
         <div class="ion-padding">
             <ion-button expand="block" type="submit" class="ion-no-margin">Update</ion-button>
         </div>
-
     </ion-list>
+
 </ion-content>
 <!--<ion-alert-controller></ion-alert-controller>-->
