--- a/seek-mobile/src/app/skills/skills.page.html
+++ b/seek-mobile/src/app/skills/skills.page.html
@@ -6,4 +6,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div id="searchDiv">
+    <ion-searchbar showCancelButton="never" placeholder=""></ion-searchbar>
+    <ion-button size="small"><ion-icon slot="icon-only" name="add"></ion-icon></ion-button>
+  </div>
+
+  <p id="chipSet">
+    <ion-chip>
+      <ion-avatar>
+        1
+      </ion-avatar>
+      <ion-label>Avatar Chip</ion-label>
+      <ion-icon name="close-circle" color="danger"></ion-icon>
+    </ion-chip>
+    <ion-chip>
+      <ion-avatar>
+        3
+      </ion-avatar>
+      <ion-label>Avatar Chip</ion-label>
+      <ion-icon name="close-circle" color="danger"></ion-icon>
+    </ion-chip>
+  </p>
+</ion-content>
