--- a/seek-mobile/src/app/profile/profile.page.scss
+++ b/seek-mobile/src/app/profile/profile.page.scss
@@ -1,7 +1,7 @@
 #profileDiv{
   display: flex;
   width: 100%;
-  padding: 2rem;
+  padding: 1rem;
   align-items: center;
   justify-content: center;
 
@@ -12,6 +12,10 @@
   }
 }
 
-ion-button{
-  --border-radius: 0;
+ion-input {
+  font-size: 0.9rem;
+}
+
+ion-select{
+  font-size: 0.9rem;
 }
