--- a/seek-mobile/src/app/search/search.page.html
+++ b/seek-mobile/src/app/search/search.page.html
@@ -46,7 +46,7 @@
             </ion-item>
         </ion-list>
         <ion-row *ngIf="items.length<1">
-            <div [ngStyle]="{color:'red', fontWeight: 'bold'}">Try searching use filters</div>
+            <div [ngStyle]="{color:'red', fontWeight: 'bold'}">Search using filters</div>
         </ion-row>
     </ion-row>
 </ion-grid>
