--- a/seek-mobile/src/app/skills/skills.page.html
+++ b/seek-mobile/src/app/skills/skills.page.html
@@ -1,31 +1,26 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Skills
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Skills
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div id="searchDiv">
-    <ion-searchbar showCancelButton="never" placeholder=""></ion-searchbar>
-    <ion-button size="small"><ion-icon slot="icon-only" name="add"></ion-icon></ion-button>
-  </div>
+    <div id="searchDiv">
+        <ion-searchbar showCancelButton="never" placeholder="" [(ngModel)]="currentSkillText"></ion-searchbar>
+        <ion-button size="small" (click)="addSkill()">
+            <ion-icon slot="icon-only" name="add"></ion-icon>
+        </ion-button>
+    </div>
 
-  <p id="chipSet">
-    <ion-chip>
-      <ion-avatar>
-        1
-      </ion-avatar>
-      <ion-label>Avatar Chip</ion-label>
-      <ion-icon name="close-circle" color="danger"></ion-icon>
-    </ion-chip>
-    <ion-chip>
-      <ion-avatar>
-        3
-      </ion-avatar>
-      <ion-label>Avatar Chip</ion-label>
-      <ion-icon name="close-circle" color="danger"></ion-icon>
-    </ion-chip>
-  </p>
+    <p id="chipSet">
+        <ion-chip *ngFor="let skill of currentUser.skills; let i = index">
+            <ion-avatar>
+                {{skill.level}}
+            </ion-avatar>
+            <ion-label>{{skill.name}}</ion-label>
+            <ion-icon name="close-circle" color="danger" (click)="removeSkill(i)"></ion-icon>
+        </ion-chip>
+    </p>
 </ion-content>
